--- a/docs/ESDG_GQ/reviewerResponse.tex
+++ b/docs/ESDG_GQ/reviewerResponse.tex
@@ -69,8 +69,9 @@
 \section{Reviewer 1}
 
 \begin{itemize}
-\item The paper is well-written for the most part (authors should adjust a few grammatical typos throughout their paper), and is interesting. 
-\item It would be good if the authors would add a few more numerical tests with model problems in domains with complex geometry where curved meshes are actually needed (at this point, authors considered either rectangular or parallelepiped domain).
+\item The paper is well-written for the most part (authors should adjust a few grammatical typos throughout their paper), and is interesting.  It would be good if the authors would add a few more numerical tests with model problems in domains with complex geometry where curved meshes are actually needed (at this point, authors considered either rectangular or parallelepiped domain).
+
+\note{blah}
 \end{itemize}
 
 \section{Reviewer 2}
@@ -78,16 +79,39 @@
 \begin{itemize}
 \item Page 7, eqn (3.8): why this equation holds? Can you add some comment here?
 
-\note{Certainly.  We've added a continuous description of the equation, and have interpreted it as a quadrature approximation of a specific variational problem.}
+\note{Certainly.  We've added a continuous description of the equation, and have interpreted the matrix version as a quadrature approximation of a specific variational problem for the approximation of the derivative.  This variational problem includes boundary correction terms, which correspond to the matrix ``strong form'' of (3.8).}
 
 \item Page 10, Theorem 3.4: In the proof, this leads to a extra coefficient 1/2 in front of the second term of the equation below (3.14).
+
+\note{We thank the reviewer for catching this, and have fixed this in the revised version.}
+
 \item In Theorem 3.4, it presents an semi-discrete entropy conservation for a two-element mesh. How to extend this to general case with multiple elements?
+
+\note{The block structure of the two-element mesh can be extended to multiple elements.  We have added a discussion involving a three-element mesh, which illustrates the procedure without introducing too much additional notation.  The approach simply requires a global SBP operator over the entire mesh, which is constructed in a block fashion.  We hope this revision makes the extension to multiple elements more clear. }
+
 \item In the statement, boundary condition is not considered. How to utilize this theorem to solve the initial-boundary value problem numerically?
-\item A pseudo code showing how to solve 1D conservation law would be very helpful
+
+\note{We have added a short discussion describing how to impose boundary conditions in a weak fashion through a boundary numerical flux.  If the boundary numerical flux satisfies an entropy stability property, then the discretization with boundary conditions is also entropy stable.}
+
+\item A pseudo code showing how to solve 1D conservation law would be very helpful.
+
+\note{We have added a description of how to numerically solve the proposed system of ODEs using explicit time-stepping.  With the exception of the evaluation of the nonlinear term, the procedure is relatively standard for time-explicit DG formulations. }
+
 \item Page 19, Section 5.3: this problem is solved on the triangular mesh. How to generalized the proposed scheme from quadrilateral and hexahedral meshes to triangular mesh?
+
+\note{We apologize for the confusion.  Here, ``triangulated'' simply means ``meshed''.  The meshes considered are all quadrilateral and hexahedral, with triangular and simplicial meshes treated in a separate work.}
+
 \item Page 4, line 152: Does the matrix size of $V_f$ equal to $(N+1) \times 2$ or $2 \times (N+1)$?
+
+\note{We thank the reviewer for catching this - it is indeed $2\times (N+1)$.}
+
 \item Page 14. line 495: $\bm{u} = (\bm{u}_1, . . . , \bm{u}_d)$. Is $\bm{u}_i$ a vector or a scalar?  
+
+\note{We apologize for the confusion.  $\bm{u}_i$ should be a scalar, and we have edited the paper to clear this up.  We are no longer using bold to denote velocity $u_i$.}
+
 \item Page 15, line 518-522: $u$ and $v$ here represent the velocity in $x$ and $y$-direction, respectively. These conflict with the notations in previous sections, where, $u$ is the conservative variable and $v$ is the entropy variable. Definition of $\{\{\cdot\}\}$ should be added here, too.
+
+\note{We have added definitions of the average and logarithmic mean.  We have also clarified the notation that $u,v$ denote $x,y$ velocity, while bolded $\bm{u},\bm{v}$ denote conservative and entropy variables.}
 \end{itemize}
 
 \end{document}
