--- a/docs/ESDG_ROM/refs.bib
+++ b/docs/ESDG_ROM/refs.bib
@@ -1,3 +1,14 @@
+@article{carlberg2015adaptive,
+  title={Adaptive h-refinement for reduced-order models},
+  author={Carlberg, Kevin},
+  journal={International Journal for Numerical Methods in Engineering},
+  volume={102},
+  number={5},
+  pages={1192--1210},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
 @article{halko2011finding,
   title={Finding structure with randomness: Probabilistic algorithms for constructing approximate matrix decompositions},
   author={Halko, Nathan and Martinsson, Per-Gunnar and Tropp, Joel A},
@@ -1369,11 +1380,13 @@ author = "Cengke Shi and Chi-Wang Shu",
 
 @misc{chenreview,
   title={{Review of entropy stable discontinuous Galerkin methods for systems of conservation laws on unstructured simplex meshes}},
-  author={Chen, Tianheng and Shu, Chi-Wang}
+  author={Chen, Tianheng and Shu, Chi-Wang},
   year={2019},
-  howpublished={{https://www.brown.edu/research/projects/scientific-computing/sites/brown.edu.research.projects.scientific-computing/files/uploads/Review%20of%20entropy%20stable%20discontinuous%20Galerkin%20methods.pdf}},
   note={Accessed July 25, 2019}
 }
+
+%  howpublished={{https://www.brown.edu/research/projects/scientific-computing/sites/brown.edu.research.projects.scientific-computing/files/uploads/Review%20of%20entropy%20stable%20discontinuous%20Galerkin%20methods.pdf}},
+
 
 
 
@@ -1575,7 +1588,16 @@ author = "Cengke Shi and Chi-Wang Shu",
   year={2016},
   publisher={Springer}
 }
-
+@article{lucia2003reduced,
+  title={Reduced order modeling of a two-dimensional flow with moving shocks},
+  author={Lucia, David J and King, Paul I and Beran, Philip S},
+  journal={Computers \& Fluids},
+  volume={32},
+  number={7},
+  pages={917--938},
+  year={2003},
+  publisher={Elsevier}
+}
 
 
 @article{mantzaflaris2016low,
