--- a/docs/ESDG_ROM/refs.bib
+++ b/docs/ESDG_ROM/refs.bib
@@ -1,3 +1,14 @@
+@article{kramer2019nonlinear,
+  title={Nonlinear model order reduction via lifting transformations and proper orthogonal decomposition},
+  author={Kramer, Boris and Willcox, Karen E},
+  journal={AIAA Journal},
+  volume={57},
+  number={6},
+  pages={2297--2307},
+  year={2019},
+  publisher={American Institute of Aeronautics and Astronautics}
+}
+
 @article{lucia2004reduced,
   title={Reduced-order modeling: new approaches for computational physics},
   author={Lucia, David J and Beran, Philip S and Silva, Walter A},
@@ -290,6 +301,14 @@
   publisher={SIAM}
 }
 
+@incollection{munz1989numerical,
+  title={Numerical Simulations of Compressible Hydrodynamic Instabiltities with High Resolution Schemes},
+  author={Munz, C-D and Schmidt, L},
+  booktitle={{Nonlinear Hyperbolic Equations—Theory, Computation Methods, and Applications}},
+  pages={456--465},
+  year={1989},
+  publisher={Springer}
+}
 @article{maboudi2018conservative,
   title={Conservative Model Order Reduction for Fluid Flow},
   author={Maboudi Afkham, Babak and Ripamonti, Nicolo and Wang, Qian and Hesthaven, Jan S},
