--- a/docs/ESDG_mortar/refs.bib
+++ b/docs/ESDG_mortar/refs.bib
@@ -1,3 +1,11 @@
+@inproceedings{shadpey2019energy,
+  title={{Energy-and Entropy-Stable Multidimensional Summation-by-Parts Discretizations on Non-Conforming Grids}},
+  author={Shadpey, Siavosh and Zingg, David W},
+  booktitle={AIAA Aviation 2019 Forum},
+  pages={3204},
+  year={2019}
+}
+
 @article{kozdon2018energy,
   title={{An energy stable approach for discretizing hyperbolic equations with nonconforming discontinuous Galerkin methods}},
   author={Kozdon, Jeremy E and Wilcox, Lucas C},
@@ -688,10 +696,15 @@
 
 @article{chan2018efficient,
   title={{Efficient entropy stable Gauss collocation methods}},
-  author={Chan, Jesse and Fernandez, David C and Carpenter, Mark H},
-  journal={arXiv preprint arXiv:1809.01178},
-  year={2018}
+  author={Chan, Jesse and Del Rey Fern\'{a}ndez, David C and Carpenter, Mark H},
+  journal={SIAM Journal on Scientific Computing},
+  volume={41},
+  number={5},
+  pages={A2938--A2966},
+  year={2019},
+  publisher={SIAM}
 }
+
 @Article{chan2019skew,
 author="Chan, Jesse",
 title={{Skew-Symmetric Entropy Stable Modal Discontinuous Galerkin Formulations}},
